--- a/tutorial1.css
+++ b/tutorial1.css
@@ -11,6 +11,13 @@ input {
     cursor: pointer;
     border: 1px solid;
     padding: 2px;
+    margin-bottom: 2px;
+    border-radius: 4px;
+    width: 100px;
+    background-color: #999;
+    color: #eee;
+    border-color: #444;
+    text-align: center;
 }
 li {
     padding-top: 10px;
@@ -27,6 +34,7 @@ li {
     height: 100px;
     margin: 5px;
     float: left;
+    position: relative;
 }
 
 .hero-unit {
